--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
   "version": "0.0.1",
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "description": "Sample application showing how to create an extension with Create React App",
+  "short_name": "Ryu",
+  "name": "Ryu",
+  "description": "super powers for chrome",
   "browser_action": {
     "default_title": "CRE",
     "default_popup": "popup.html"
@@ -23,6 +23,6 @@
     "128": "img/icon-128.png"
   },
   "options_page": "options.html",
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "storage", "tabs", "sessions"],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
