--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "version": "0.0.1",
   "short_name": "Ryu",
   "name": "Ryu",
@@ -24,5 +24,7 @@
   },
   "options_page": "options.html",
   "permissions": ["activeTab", "storage", "tabs", "sessions"],
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  }
 }
